# AI_Inference_Platform

./: .env.example  .gitignore  AGENTS.md  README.md  check_metrics.sh  check_targets.sh  deploy_https.sh  docker-compose.yml  enable_ssl.sh  runbook.md  setup_dns.ps1  setup_portproxy.bat  start_services.sh  test_admin.sh  test_api_key.py  test_backend.sh  test_conversations.sh  test_custom_org.sh  test_e2e.sh  test_inference.sh  test_new_auth_flow.py  test_new_endpoints.py  test_phase2.sh  test_roles.py  update_hosts_root.sh  update_wsl_hosts.sh  write_hosts.ps1
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: config.py  database.py  main.py
backend/app/dependencies/: auth.py
backend/app/middleware/: correlation.py  error_handler.py  logging.py
backend/app/models/: api_key.py  conversation.py  org.py  otp.py  usage_log.py  user.py
backend/app/observability/: logging.py  metrics.py
backend/app/routers/: auth.py  conversations.py  health.py  inference.py
backend/app/routers/admin/: api_keys.py  orgs.py  usage.py  users.py
backend/app/schemas/: auth.py  inference.py
backend/app/services/: auth_service.py  email_service.py  inference_service.py  otp_service.py  rate_limit_service.py  usage_service.py
backend/app/utils/: errors.py
backend/tests/: conftest.py
backend/tests/integration/: test_conversations.py  test_inference.py  test_reliability.py  test_security_hardening.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_openai_engine.py
(+139 files in other folders)
