[project]
name = "ai-inference-platform"
version = "1.0.0"
description = "Single-host CPU-native AI inference serving platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "httpx==0.27.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.5.0",
    "redis[hiredis]==5.0.4",
    "structlog==24.1.0",
    "prometheus-fastapi-instrumentator==6.1.0",
    "prometheus-client==0.20.0",
    "python-multipart==0.0.28",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "pip-audit==2.7.3",
    "locust==2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
